v1.4 task-supervisor and case-allocator drool rules added, further test refactoring