@@ -1,7 +1,6 @@
 package uk.gov.hmcts.reform.orgrolemapping.domain.service;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.HashMap;
@@ -15,7 +14,6 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -53,6 +51,8 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
         expectedRoleNameWorkTypesMap.put("hmcts-legal-operations", null);
         expectedRoleNameWorkTypesMap.put("nbc-team-leader", "routine_work,access_requests");
         expectedRoleNameWorkTypesMap.put("national-business-centre", "routine_work");
+        expectedRoleNameWorkTypesMap.put("task-supervisor", "routine_work,hearing_work,access_requests");
+        expectedRoleNameWorkTypesMap.put("case-allocator", null);
     }
 
     static void assertCommonRoleAssignmentAttributes(RoleAssignment r, String roleId,
@@ -71,6 +71,7 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
                 r.getRoleName())) {
             assertEquals(Classification.PRIVATE, r.getClassification());
             assertEquals(GrantType.BASIC, r.getGrantType());
+            assertEquals(null, r.getAttributes().get("jurisdiction"));
             assertTrue(r.isReadOnly());
             assertNull(primaryLocation);
             assertNull(r.getAttributes().get("region"));
@@ -80,14 +81,21 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
             assertEquals(JURISDICTION, r.getAttributes().get("jurisdiction").asText());
             assertFalse(r.isReadOnly());
             assertEquals(UserAccessProfileBuilder.PRIMARY_LOCATION_ID, primaryLocation);
-            if (List.of("9", "10").contains(roleId)) {
+            if (List.of("9", "10", "1", "2").contains(roleId)) {
                 assertNull(r.getAttributes().get("region"));
             } else {
                 assertNull(r.getAttributes().get(REGION_ID));
             }
         }
 
-        String expectedWorkTypes = expectedRoleNameWorkTypesMap.get(r.getRoleName());
+
+        String expectedWorkTypes;
+        if (roleId.equals("1") && r.getRoleName().equals("task-supervisor")) {
+            expectedWorkTypes = "decision_making_work,access_requests";
+        } else {
+            expectedWorkTypes = expectedRoleNameWorkTypesMap.get(r.getRoleName());
+        }
+
         String actualWorkTypes = null;
         if (r.getAttributes().get("workTypes") != null) {
             actualWorkTypes = r.getAttributes().get("workTypes").asText();
@@ -95,118 +103,43 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
         assertEquals(expectedWorkTypes, actualWorkTypes);
     }
 
-    @Test
-    void shouldReturnCivilCaseworkerMappings() {
-
-        judicialAccessProfiles.clear();
-        judicialOfficeHolders.clear();
-
-        CaseWorkerAccessProfile cap = UserAccessProfileBuilder.buildUserAccessProfileForRoleId2();
-        cap.setServiceCode(SERVICE_CODE);
-        cap.setSuspended(false);
-        cap.setRegionId(REGION_ID);
-
-        allProfiles.add(cap);
-
-        //Execute Kie session
-        List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(List.of(FeatureFlag.builder().flagName("civil_wa_1_0").status(true).build(),
-                        FeatureFlag.builder().flagName("civil_wa_1_4").status(false).build()));
-
-        //assertion
-        assertFalse(roleAssignments.isEmpty());
-        assertEquals(2, roleAssignments.size());
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
-                containsInAnyOrder("tribunal-caseworker", "hmcts-legal-operations"));
-        roleAssignments.forEach(r -> {
-            assertEquals("LEGAL_OPERATIONS", r.getRoleCategory().toString());
-            assertEquals(ROLE_TYPE, r.getRoleType().toString());
-        });
-
-        roleAssignments.stream().filter(c -> c.getGrantType().equals(GrantType.STANDARD)).collect(Collectors.toList())
-                .forEach(r -> {
-                    assertEquals(JURISDICTION, r.getAttributes().get("jurisdiction").asText());
-                    assertEquals("decision_making_work", r.getAttributes().get("workTypes").asText());
-                    assertEquals(REGION_ID, r.getAttributes().get("region").asText());
-                    assertEquals(cap.getPrimaryLocationId(), r.getAttributes().get("primaryLocation").asText());
-                });
-    }
-
-    @Test
-    void shouldReturnCivilCaseworkerMappingsForSeniorTribunalCaseworker() {
-
-        judicialAccessProfiles.clear();
-        judicialOfficeHolders.clear();
-
-        CaseWorkerAccessProfile cap = UserAccessProfileBuilder.buildUserAccessProfileForRoleId3();
-        List<String> skillCodes = List.of("civil", "test", "ctsc");
-        cap.setServiceCode(SERVICE_CODE);
-        cap.setSuspended(false);
-        cap.setRegionId(REGION_ID);
-        cap.setTaskSupervisorFlag("Y");
-        cap.setCaseAllocatorFlag("Y");
-        cap.setSkillCodes(skillCodes);
-        allProfiles.add(cap);
-
-        //Execute Kie session
-        List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("civil_wa_1_0", true));
-
-        //assertion
-        assertFalse(roleAssignments.isEmpty());
-        assertEquals(4, roleAssignments.size());
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
-                containsInAnyOrder("senior-tribunal-caseworker", "hmcts-legal-operations", "task-supervisor",
-                        "case-allocator"));
-        roleAssignments.forEach(r -> {
-            assertEquals("LEGAL_OPERATIONS", r.getRoleCategory().toString());
-            assertEquals(ROLE_TYPE, r.getRoleType().toString());
-            if (!r.getRoleName().contains("hmcts")) {
-                assertEquals(skillCodes, r.getAuthorisations());
-            }
-        });
-
-        roleAssignments.stream().filter(c -> c.getGrantType().equals(GrantType.STANDARD)).collect(Collectors.toList())
-                .forEach(r -> {
-                    assertEquals(JURISDICTION, r.getAttributes().get("jurisdiction").asText());
-                    if ("senior-tribunal-caseworker".equals(r.getRoleName())
-                        || "task-supervisor".equals(r.getRoleName())) {
-                        assertEquals("decision_making_work,access_requests",
-                                r.getAttributes().get("workTypes").asText());
-                    }
-                    assertEquals(REGION_ID, r.getAttributes().get("region").asText());
-                    assertEquals(cap.getPrimaryLocationId(), r.getAttributes().get("primaryLocation").asText());
-                });
-    }
-
-    static Stream<Arguments> generateDatav11() {
+    static Stream<Arguments> generateDatav14() {
         return Stream.of(
-            Arguments.of("10", Arrays.asList("hmcts-ctsc", "ctsc"),
-                2, Arrays.asList("routine_work"), RoleCategory.CTSC),
-            Arguments.of("4", Arrays.asList("hmcts-admin", "hearing-centre-admin"),
-                2, Collections.singletonList("hearing_work"), RoleCategory.ADMIN),
-            Arguments.of("2", Arrays.asList("tribunal-caseworker", "hmcts-legal-operations"),
-                2, List.of("decision_making_work"), RoleCategory.LEGAL_OPERATIONS),
-            Arguments.of("11", Arrays.asList("hmcts-admin","national-business-centre"),
-                2, Arrays.asList("routine_work"), RoleCategory.ADMIN),
+            Arguments.of("10", Arrays.asList("hmcts-ctsc", "ctsc"), 2, RoleCategory.CTSC, "N", "N"),
+            Arguments.of("4", Arrays.asList("hmcts-admin", "hearing-centre-admin"), 2, RoleCategory.ADMIN,
+                "N", "N"),
+            Arguments.of("2", Arrays.asList("tribunal-caseworker", "hmcts-legal-operations"), 2,
+                RoleCategory.LEGAL_OPERATIONS, "N", "N"),
+            Arguments.of("11", Arrays.asList("hmcts-admin","national-business-centre"), 2,
+                RoleCategory.ADMIN, "N", "N"),
             Arguments.of("1", Arrays.asList("tribunal-caseworker", "senior-tribunal-caseworker",
-                "hmcts-legal-operations"), 3, Arrays.asList("decision_making_work"), RoleCategory.LEGAL_OPERATIONS),
+                "hmcts-legal-operations"), 3, RoleCategory.LEGAL_OPERATIONS, "N", "N"),
+            Arguments.of("1", Arrays.asList("tribunal-caseworker", "senior-tribunal-caseworker",
+                "hmcts-legal-operations", "task-supervisor", "case-allocator"), 5, RoleCategory.LEGAL_OPERATIONS, "Y",
+                "Y"),
             Arguments.of("3", Arrays.asList("hearing-centre-admin", "hmcts-admin",
-                "hearing-centre-team-leader"), 3, Collections.singletonList("hearing_work"), RoleCategory.ADMIN),
+                "hearing-centre-team-leader"), 3, RoleCategory.ADMIN, "N", "N"),
+            Arguments.of("3", Arrays.asList("hearing-centre-admin", "hmcts-admin",
+                "hearing-centre-team-leader", "task-supervisor"), 4, RoleCategory.ADMIN, "Y", "N"),
             Arguments.of("6", Arrays.asList("national-business-centre", "hmcts-admin", "nbc-team-leader"),
-                3, Arrays.asList("routine_work"), RoleCategory.ADMIN),
-            Arguments.of("9", Arrays.asList("ctsc", "hmcts-ctsc", "ctsc-team-leader"),
-                3, Arrays.asList("routine_work"), RoleCategory.CTSC)
+                3, RoleCategory.ADMIN, "N", "N"),
+            Arguments.of("6", Arrays.asList("national-business-centre", "hmcts-admin", "nbc-team-leader",
+                "task-supervisor", "case-allocator"), 5, RoleCategory.ADMIN, "Y", "Y"),
+            Arguments.of("9", Arrays.asList("ctsc", "hmcts-ctsc", "ctsc-team-leader"), 3, RoleCategory.CTSC,
+                "N", "N"),
+            Arguments.of("9", Arrays.asList("ctsc", "hmcts-ctsc", "ctsc-team-leader", "task-supervisor",
+                "case-allocator"), 5, RoleCategory.CTSC, "Y", "Y")
         );
     }
 
     @ParameterizedTest
-    @MethodSource("generateDatav11")
-    void shouldReturnCivilAdminMappings_v11(String roleId,
+    @MethodSource("generateDatav14")
+    void shouldReturnCivilAdminMappings_v14(String roleId,
                                             List<String> roleNames,
                                             int roleCount,
-                                            List<String> workTypes,
-                                            RoleCategory expectedRoleCategory) {
+                                            RoleCategory expectedRoleCategory,
+                                            String taskSupervisorFlag,
+                                            String taskAllocatorFlag) {
 
         judicialAccessProfiles.clear();
         judicialOfficeHolders.clear();
@@ -218,6 +151,8 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
         cap.setSuspended(false);
         cap.setRegionId(REGION_ID);
         cap.setSkillCodes(skillCodes);
+        cap.setTaskSupervisorFlag(taskSupervisorFlag);
+        cap.setCaseAllocatorFlag(taskAllocatorFlag);
 
         allProfiles.add(cap);
 
@@ -227,7 +162,7 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
                         FeatureFlag.builder().flagName("civil_wa_1_1").status(true).build(),
                         FeatureFlag.builder().flagName("civil_wa_1_2").status(true).build(),
                         FeatureFlag.builder().flagName("civil_wa_1_3").status(true).build(),
-                        FeatureFlag.builder().flagName("civil_wa_1_4").status(false).build()));
+                        FeatureFlag.builder().flagName("civil_wa_1_4").status(true).build()));
 
         //assertion
         assertFalse(roleAssignments.isEmpty());
